--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,6 +466,7 @@ h6 {
   margin: 5px 0 30px 0;
   font-size: 20px;
   font-weight: 400;
+  font-family: "Poppins", sans-serif;
 }
 
 #hero .btn-get-started {
